# receptor_finder

./: INTERFACE.md  README.md  ROADMAP.md  launch_gui.py  pyproject.toml  requirements.txt
data/: example_sequences.fasta
docs/: PROJECT_SUMMARY.md  QUICKSTART_GUI.md  in_silico_calcium_projects.md  plant_calcium_research_proposals.md
src/: __init__.py  binding_pocket.py  check_dependencies.py  docking.py  gui_app.py  phylogenetics.py  scoring.py  sequence_analysis.py  structure_prediction.py  utils.py  visualization.py
tests/: test_scoring.py  test_sequence_analysis.py  test_utils.py
